// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - ShelfSection should render correctly 1`] = `
<Section
  className="root"
  header={false}
  pullout={false}
  slim={false}
>
  <div
    className="shelfDivider"
  />
  <Text
    baseline={true}
    className="shelfLinksContainer"
    whispering={true}
  >
    <div
      key="0"
    >
      Job function: 
      <Link
        className="shelfLink"
        key="0"
        link="/jobCard"
        title="Limit result to Accounting"
      >
        Accounting
      </Link>
       &gt; 
      <Link
        className="shelfLink"
        key="00"
        link="/jobCard"
        title="Limit result to Accountant in Accounting"
      >
        Accountant
      </Link>
       | 
      <Link
        className="shelfLink"
        key="01"
        link="/jobCard"
        title="Limit result to Audit in Accounting"
      >
        Audit
      </Link>
       | 
      <Link
        className="shelfLink"
        key="02"
        link="/jobCard"
        title="Limit result to Others in Accounting"
      >
        Others
      </Link>
      , 
      <Link
        className="shelfLink"
        key="1"
        link="/jobCard"
        title="Limit result to Admin & HR"
      >
        Admin & HR
      </Link>
       &gt; 
      <Link
        className="shelfLink"
        key="10"
        link="/jobCard"
        title="Limit result to Receptionist in Admin & HR"
      >
        Receptionist
      </Link>
    </div>
    <div
      key="1"
    >
      Industry: 
      <Link
        className="shelfLink"
        key="0"
        link="/jobCard"
        title="Limit result to Accounting / Audit / Tax Services"
      >
        Accounting / Audit / Tax Services
      </Link>
    </div>
  </Text>
  <ButtonGroup
    className="tagLinksContainer"
  >
    <Button
      aria-pressed={false}
      className="tagLink"
      color="primary"
      compact={true}
      component="a"
      href="/jobCard"
      key="0"
      role="button"
      tabindex={0}
      title="Limit result to Keyword 1"
    >
      keyword 1
    </Button>
    <Button
      aria-pressed={false}
      className="tagLink"
      color="primary"
      compact={true}
      component="a"
      href="/jobCard"
      key="1"
      role="button"
      tabindex={0}
      title="Limit result to Keyword 2"
    >
      keyword 2
    </Button>
  </ButtonGroup>
</Section>
`;

exports[`JobCard - ShelfSection should render custom link 1`] = `
<Section
  className="root"
  header={false}
  pullout={false}
  slim={false}
>
  <div
    className="shelfDivider"
  />
  <Text
    baseline={true}
    className="shelfLinksContainer"
    whispering={true}
  >
    <div
      key="0"
    >
      Job function: 
      <customLink
        className="shelfLink"
        key="0"
        link="/jobCard"
        title="Limit result to Accounting"
      >
        Accounting
      </customLink>
       &gt; 
      <customLink
        className="shelfLink"
        key="00"
        link="/jobCard"
        title="Limit result to Accountant in Accounting"
      >
        Accountant
      </customLink>
       | 
      <customLink
        className="shelfLink"
        key="01"
        link="/jobCard"
        title="Limit result to Audit in Accounting"
      >
        Audit
      </customLink>
       | 
      <customLink
        className="shelfLink"
        key="02"
        link="/jobCard"
        title="Limit result to Others in Accounting"
      >
        Others
      </customLink>
      , 
      <customLink
        className="shelfLink"
        key="1"
        link="/jobCard"
        title="Limit result to Admin & HR"
      >
        Admin & HR
      </customLink>
       &gt; 
      <customLink
        className="shelfLink"
        key="10"
        link="/jobCard"
        title="Limit result to Receptionist in Admin & HR"
      >
        Receptionist
      </customLink>
    </div>
    <div
      key="1"
    >
      Industry: 
      <customLink
        className="shelfLink"
        key="0"
        link="/jobCard"
        title="Limit result to Accounting / Audit / Tax Services"
      >
        Accounting / Audit / Tax Services
      </customLink>
    </div>
  </Text>
  <ButtonGroup
    className="tagLinksContainer"
  >
    <Button
      aria-pressed={false}
      className="tagLink"
      color="primary"
      compact={true}
      component="a"
      href="/jobCard"
      key="0"
      role="button"
      tabindex={0}
      title="Limit result to Keyword 1"
    >
      keyword 1
    </Button>
    <Button
      aria-pressed={false}
      className="tagLink"
      color="primary"
      compact={true}
      component="a"
      href="/jobCard"
      key="1"
      role="button"
      tabindex={0}
      title="Limit result to Keyword 2"
    >
      keyword 2
    </Button>
  </ButtonGroup>
</Section>
`;
